--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
     "version": "0.0.1",
     "description": "Awesome project developed with TypeORM.",
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.8",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^8.0.29",
         "ts-node": "3.3.0",
         "typescript": "3.3.3333"
     },
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.14.1",
         "nodemon": "^2.0.6",
         "reflect-metadata": "^0.1.10",
