Update execute migrations

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "typeorm": "0.2.29"
     },
     "scripts": {
-        "start": "nodemon src/server.ts"
+        "start": "nodemon src/server.ts",
+        "typeorm": "ts-node ./node_modules/typeorm/cli.js"
     }
 }
